# elasticsearch-sandbox

./: .gitignore  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini  requirements_dev.txt
config/: settings.py  urls.py
cron/: main.py  requirements.txt
cron/cron/: connect.py  data_synchronize.py  elastic.py  main.py  mapping.py  rss.py  sql.py
cron/cron/mapping/: pypi.py
cron/tests/: test_rss.py  test_sql.py
search/: documents.py  rss.py
search/management/commands/: rss_fetch.py
search/migrations/: 0002_auto_20210522_1228.py
search/tests/: test_rss.py  test_urls.py
search/tests/management/commands/: test_rss_fetch.py
webapp/: conftest.py  pytest.ini  requirements.txt
webapp/config/: settings.py
webapp/package/: models.py  urls.py  views.py
webapp/package/tests/: test_vies.py
webapp/search/: documents.py  models.py  urls.py  views.py
webapp/search/api/: views.py
webapp/search/migrations/: 0001_initial.py
webapp/search/tests/: factories.py  test_views.py
webapp/search/tests/api/: test_urls.py  test_views.py
webapp/templates/: base.html
webapp/templates/search/: list.html
webapp/webapp/: settings.py  urls.py
