[tool.poetry]
name = "elasticsearch-sandbox"
version = "0.1.0"
description = ""
authors = ["kengenal <kengenal1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-elasticsearch-dsl = "^7.2.0"
feedparser = "^6.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-django = "^4.3.0"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
